--- a/app/templates/pedidos/ver_pedidos.html
+++ b/app/templates/pedidos/ver_pedidos.html
@@ -54,7 +54,7 @@
         <tbody>
             {% for pedido in pedidos %}
                 <tr>
-                    <td>{{ pedido[0] }}</td> <!-- Cambia los índices según tu estructura -->
+                    <td>{{ pedido[0] }}</td>
                     <td>{{ pedido[1] }}</td>
                     <td>{{ pedido[2] }}</td>
                     <td>{{ pedido[3] }}</td>
@@ -72,6 +72,6 @@
 
     <!-- Cambia esto al nombre correcto del endpoint -->
     <a href="{{ url_for('crear_pedido.crear_pedido') }}">Crear Pedido</a> 
-    <a href="{{ url_for('historial.ver_historial') }}">Ver Historial de Pedidos</a> <!-- Cambiado al nombre correcto -->
+    <a href="{{ url_for('historial.ver_historial') }}">Historial de Pedidos</a> <!-- Cambiado al nombre correcto -->
 </body>
 </html>
